アソシエーション

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @blogs.each do |blog| %>
       <tr>
+        <td><%= blog.user.name %></td>
         <td><%= blog.content %></td>
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
